--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,10 @@
 == README
 
-This is an API implementation of a community chat system, in Rails with an PostgreSQL backend compatible with Heroku deplyoment.
+This is an API implementation of a community chat system, in Rails with an PostgreSQL backend compatible with Heroku deplyoment.  
 
 
-Ruby Version: 2.2.3
-Rails Version: 4.2.4
-Gemfiles: Check Gemfile for additional gems included for devise and token auth support.
+*Ruby Version: 2.2.3  
+*Rails Version: 4.2.4  
+*Gemfiles: Check Gemfile for additional gems included for devise and token auth support.  
+
+Includes implementation of Token Based Authentication found [here](https://github.com/lynndylanhurley/devise_token_auth).  
